<resources>
    <string name="app_name">The360</string>

    // Front page
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="welcomeText">Hjellooo juutuub!</string>
    <string name="totalTriesText">Total tries</string>
    <string name="toTodaysGoal">Left today</string>
    <string name="daysSinceLastText">Last played</string>
    <string name="totalPuttsText">Total putts</string>

    //bottom navigation
    <string name="mainActivity">Main</string>
    <string name="puttingActivity">Putting</string>
    <string name="drivingActivity">Driving</string>
    <string name="roundAnalysisActivity">Analysis</string>

    //// Putting
    <string name="frontPagePuttingHeader">Putting</string>
    <string name="frontPageJyly">Jyly</string>
    <string name="frontPageMaxPutts">Max Putts</string>
    <string name="frontPageRandomPutts">Random Putts</string>
    <string name="puttLocationText">Putt Location</string>
    <string name="windSpeedText2">Wind Speed</string>
    <string name="windFrontBackText">Wind (Front/Back)</string>
    <string name="windLeftRightText">Wind (Left/Right)</string>
    <string name="scoreText">Amount made</string>
    <string name="puttDistanceText">Putting Distance</string>
    <string name="missesText">Misses</string>
    <string name="attemptsText">Attempts</string>
    <string name="frontPagePuttTest">Test your putt</string>
    <string name="stanceManager">Stance Manager</string>

    //// Driving
    <string name="frontPageDrivingHeader">Driving</string>
    <string name="frontPageDrivingAccuracy">Accuracy</string>
    <string name="frontPageDrivingDistance">Distance</string>
    <string name="frontPageDrivingSpeed">Speed</string>

    //// Rounds
    <string name="frontPageRoundsHeader">Round stuff</string>
    <string name="frontPageITB">In the Bag</string>
    <string name="frontPageRoundSummary">Round Summary</string>


    //upcoming
    <string name="shortterm">Hold ya horses! Its coming its coming</string>
    <string name="midterm">yeah yeah working on it...</string>
    <string name="longterm">Its... yeah we have an idea. That is about it</string>


    ////maxputts strings
    <string name="radioselect4m">4m</string>
    <string name="radioselect5m">5m</string>
    <string name="radioselect6m">6m</string>
    <string name="radioselect7m">7m</string>
    <string name="radioselect8m">8m</string>
    <string name="radioselect9m">9m</string>
    <string name="radioselect10m">10m</string>

    <string name="radioselectindoors">Indoors</string>
    <string name="radioselectoutdoors">Outdoors</string>

    <string name="mpWindNone">None</string>
    <string name="mpWindLow">Low</string>
    <string name="mpWindMid">Medium</string>
    <string name="mpWindHigh">High</string>

    <string name="mpWindDirectFront">Front</string>
    <string name="mpWindRight">Right</string>
    <string name="mpWindBehind">Behind</string>
    <string name="mpWindLeft">Left</string>
    <string name="mpWindFrontBackNone">None</string>
    <string name="mpWindLeftRightNone">None</string>


    <string name="mpNewRound">New round</string>
    <string name="mpLeaderboard">Leaderboard</string>
    <string name="mpExit">Exit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="headerRowDistance">Distance</string>
    <string name="headerRowTarget">Target%</string>
    <string name="headerRowCurrentPros">Current%</string>
    <string name="headerRowCurrentCumulative">Cumulative%</string>
    <string name="headerRowPuttsAttempted">Putts Attempted</string>

    // randputts strings
    <string name="toggleLocation">Location</string>
    <string name="toggleWind">Wind</string>
    <string name="toggleStance">Stance</string>
    <string name="toggleDistance">Distance</string>
    <string name="toggleTarget">Target</string>

    //stanceSelector strings
    <string name="popUpStanceSelectorName">Stance</string>
    <string name="popUpStanceSelectorDisable">Disable</string>
    <string name="popUpStanceSelectorDelete">Delete</string>
    <string name="popUpStanceSelectorAddNew">Add New</string>


</resources>