<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrivingActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/drivingSelectionTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:focusable="true"
        android:src="@drawable/ic_baseline_arrow_circle_up_24"
        app:layout_constraintBottom_toTopOf="@+id/tableRow5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/accuracy"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/circle"
        android:text="@string/frontPageDrivingAccuracy"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/drivingSelectionTree"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/distance"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/circle"
        android:text="@string/frontPageDrivingDistance"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/accuracy"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/speed"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/circle"
        android:text="@string/frontPageDrivingSpeed"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableRow
        android:id="@+id/topLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/headerColor">

        <TextView
            android:id="@+id/totalTries"
            android:textSize="35dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/leftTillTodaysGoal"
            android:textSize="35dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/daysSinceLast"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/totalPutts"
            android:textSize="35dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLine">


        <TextView
            android:id="@+id/totalTriesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalTriesText" />

        <TextView
            android:id="@+id/goalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toTodaysGoal" />

        <TextView
            android:id="@+id/daysSinceLastText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daysSinceLastText" />

        <TextView
            android:id="@+id/totalPuttsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalPuttsText" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/chinColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/navMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/mainActivity"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/navPutting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/puttingActivity"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/navDriving"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/drivingActivity"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/navAnalysis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/roundAnalysisActivity"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </TableRow>

    <TextView
        android:id="@+id/drivingheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frontPageDrivingHeader"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>